src/App.scss
// styles go here
body {
  background-color: rgb(249, 255, 196);
}

.App {
  display: flex;
  flex-direction: column;
  align-items: center;

  font-size: 25px;
}

.list {
  width: 25%;
  font-size: 30px;

  &__selected{
    display: flex;
    justify-content: space-between;

    height: 140px;
  }

  &__button-X {
    background-color: black;
    color: blanchedalmond;
    font-size: 25px;
    font-weight: bold;
  }

  &__active {
  background-color: rgb(3, 179, 18);
  }

  &__item {
    display: flex;
    justify-content: space-between;
  }
}

